# JIPP2

./: CMakeLists.txt  README.md  main.cpp
FirstLib/: CMakeLists.txt
LAB_1/SimpleCalc/: CMakeLists.txt
LAB_1/allocation_basics/: CMakeLists.txt  main.cpp
LAB_12/Ex_2/: CMakeLists.txt
LAB_2/firstLib/: CMakeLists.txt
LAB_2/firstLibCall/: CMakeLists.txt
LAB_3/ClassExercise/: CMakeLists.txt
LAB_3/PrzeciazanieFunkcji/: CMakeLists.txt
LAB_3/bledy/: CMakeLists.txt
LAB_3/firstClass/: CMakeLists.txt
LAB_3/pointerExercise/: CMakeLists.txt
LAB_3/structExercise/: CMakeLists.txt
LAB_3/tabExercise/: CMakeLists.txt
LAB_4/ClassExercise/: CMakeLists.txt
LAB_4/Example/: CMakeLists.txt
LAB_4/firstClass/: CMakeLists.txt
LAB_5/5.1/: CMakeLists.txt
LAB_5/5.2/: CMakeLists.txt
LAB_5/5.3/: CMakeLists.txt
LAB_5/Example/: CMakeLists.txt
LAB_5/Lab5/: CMakeLists.txt
LAB_6/Complex/: CMakeLists.txt
LAB_6/Node/: CMakeLists.txt
LAB_6/Traingle/: CMakeLists.txt
LAB_6/Vector/: CMakeLists.txt
LAB_7/: CMakeLists.txt
LAB_7/Figure/: CMakeLists.txt
LAB_7/include/: circle.h  figure.h  rectangle.h  triangle.h
LAB_7/src/: circle.cpp  figure.cpp  main.cpp  rectangle.cpp  triangle.cpp
LAB_8/: CMakeLists.txt
LAB_8/include/: listNote.h  note.h  noteDirector.h  textNote.h
LAB_8/src/: listNote.cpp  main.cpp  note.cpp  noteDirector.cpp  textNote.cpp
LAB_9/List/: CMakeLists.txt
LAB_9/Vector/: CMakeLists.txt
MatrixProject/matrixApp/: CMakeLists.txt
MatrixProject/matrixLib/: CMakeLists.txt
allocation_basics/: CMakeLists.txt
lab 4/: CMakeLists.txt
(+120 files in other folders)
