cmake_minimum_required(VERSION 3.16)

PROJECT(JIPP2)

add_subdirectory(LAB_1/allocation_basics)

add_subdirectory(LAB_1/SimpleCalc)

add_subdirectory(LAB_2/firstLib)

add_subdirectory(LAB_2/firstLibCall)

add_subdirectory(LAB_3/firstClass)

add_subdirectory(LAB_3/structExercise)

add_subdirectory(LAB_3/ClassExercise)

add_subdirectory(LAB_4/Example)

add_subdirectory(LAB_5/5.1)

add_subdirectory(MatrixProject/matrixLib)

add_subdirectory(MatrixProject/matrixApp)


