cmake_minimum_required(VERSION 3.12)

PROJECT(JIPP2)

add_subdirectory(LAB_2/allocation_basics)

add_subdirectory(LAB_2/SimpleCalc)

add_subdirectory(LAB_3/firstLib)

add_subdirectory(LAB_3/firstLibCall)

add_subdirectory(LAB_3/PrzeciazanieFunkcji)

add_subdirectory(LAB_3/tabExercise)

add_subdirectory(LAB_3/pointerExercise)

add_subdirectory(LAB_3/bledy)

add_subdirectory(LAB_4/firstClass)

add_subdirectory(LAB_4/structExercise)

add_subdirectory(LAB_4/ClassExercise)

add_subdirectory(LAB_5/Example)

add_subdirectory(LAB_5/Lab5)

add_subdirectory(LAB_6/Traingle)

add_subdirectory(LAB_7)

add_subdirectory(LAB_8)

add_subdirectory(LAB_9/Vector)

add_subdirectory(LAB_9/List)

add_subdirectory(MatrixProject/matrixLib)

add_subdirectory(MatrixProject/matrixApp)


